--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroku-vless",
+  "name": "opmjh",
   "description": "Deploy vless on Heroku.",
   "keywords": [
     "vless"
@@ -10,7 +10,7 @@
       "value": "10974d1a-cbd6-4b6f-db1d-38d78b3fb109"
     }
   },
-  "website": "https://github.com/rptec/",
-  "repository": "https://github.com/rptec/heroku-vless",
+  "website": "https://github.com/youpi90/",
+  "repository": "https://github.com/youpi90/ertnm",
   "stack": "container"
 }
